[package]
name = "ludwig"
version = "0.1.0"
authors = ["dodadoa <maddodadoa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
exitfailure = "0.5.1"
rspotify = { version = "0.10"}